--- a/src/views/index.handlebars
+++ b/src/views/index.handlebars
@@ -1,5 +1,9 @@
 <div>
     <h1> hola {{name}} bienvenido a la tienda </h1>
+
+    <div>
+    Productos en tiempo real === <a href="/realtimeproducts">Click!</a>
+</div>
     {{!-- <h2>Todo listo para trabajar con socket</h2>
     <div>
         <input id='chatBox' type="text" name="chatBox">
